--- a/src/sass/global/general.scss
+++ b/src/sass/global/general.scss
@@ -6,12 +6,15 @@
   color: $c-primary;
 }
 
+.container-full {
+  width: 100%;
+}
+
 // Центровщик
 .container-inner {
   margin: 0 auto;
-  padding: 0 15px;
   @media (min-width: 1200px) {
-    width: 1170px;
+    width: 970px;
   }
 
   @media (min-width: 992px) {
@@ -21,4 +24,16 @@
   @media (min-width: 768px) {
     width: 750px;
   }
+}
+
+// FLEX блоки
+
+.flex-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.flex-dir-column {
+  flex-direction: column;
 }
