--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,18 +1,20 @@
-//Цвета
-$c-primary: #000;
-$c-secondary: #fff;
+//Цвета 
+$c-primary: #000000;
+$c-secondary: #827e7c;
+$c-third: #606060;
 
-$c-bg-primary: #1e7874;
-$c-bg-secondary: #1c8a85;
-$c-bg-third: #186068;
+$c-bg-primary: #fff;
+$c-bg-secondary: #ededed;
+$c-bg-third: #fd936e;
+
+$c-border: #de6b43;
 
 //Типографика
-$f-primary: "OpenSans-Regular", "Arial", sans-serif;
-$f-secondary: "RobotoSlab-Regular", "Arial", sans-serif;
+$f-primary: "Arial", sans-serif;
+$f-secondary: "Helvetica", sans-serif;
 
 $f-sub-menu-size: 12px;
 
-
 $f-text-size: 17px;
 
-$f-base-lh: 1.54;
+$f-base-lh: 1.3;
