--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,13 +6,11 @@
 @import "global/icons";
 @import "global/scaffolding";
 @import "global/general";
-
 .full-bg-color {
     background-color: $c-primary;
 }
 
 // HEADER
-
 // верхняя черная линия
 .header-top-line {
     min-height: 30px;
@@ -55,12 +53,8 @@
         background-image: url(../img/icons/contact---user.png);
     }
 }
+
 // верхняя черная линия
-
-
-.logo-and-menu {
-    padding-top: 20px;
-}
 .logo {
     padding-top: 20px;
 }
@@ -69,18 +63,18 @@
     margin-top: 13px;
     align-self: center;
 }
+
 .menu-list__item {
     position: relative;
     display: inline-block;
     margin-left: 32px;
-    padding-bottom: 15px;
     &>a>i {
         margin-left: 6px;
     }
     &>a:hover {
         text-decoration: underline;
     }
-    &>a:hover + .item-drop-menu {
+    &:hover .item-drop-menu {
         opacity: 1;
         top: 20px;
         transition: 0.5s opacity;
@@ -89,12 +83,13 @@
 
 // Выпадающее меню
 .item-drop-menu {
-    border-top: 10px solid tra;
+    border-top: 10px solid transparent;
     position: absolute;
     top: -9999px;
     left: -5px;
     width: 100px;
     opacity: 0;
+    z-index: 10;
     &__list-item {
         background-color: #fd936e;
         padding: 5px 5px;
@@ -103,20 +98,17 @@
     &__list-item:hover {
         background: #de6b43;
         padding: 6px 4px 4px 6px;
-        transition: 0.5s all;
+        transition: 0.3s all;
     }
-    &__list-item > a {
+    &__list-item>a {
         text-decoration: none;
         &:hover {
-        text-decoration: underline;
+            text-decoration: underline;
         }
     }
 }
 
 // Выпадающее меню
-
-
-
 .bucket-info {
     width: 215px;
     margin-top: 20px;
@@ -127,7 +119,7 @@
         border: 1px solid #d7d7d7;
         color: #949393;
     }
-    & > select > option {
+    &>select>option {
         color: #949393;
     }
     &__items {
@@ -163,18 +155,60 @@
     }
 }
 
+// SLIDER
+.slick-slider {
+    position: relative;
+    margin-top: 20px;
+}
+.slick-slider img {
+    width: 100%;
+    height: auto;
+}
+.slick-prev-arrow {
+    position: absolute;
+    top: calc(50% - 58px);
+    left: 0;
+    width: 30px;
+    height: 117px;
+    background-color: #fff;
+    z-index: 2000;
+   ;
+}
+.slick-next-arrow {
+    position: absolute;
+    top: calc(50% - 58px);
+    right: 0;
+    width: 30px;
+    height: 117px;
+    background-color: #fff;
+    z-index: 2000;
+}
+// SLIDER
+.slide {
+    position: relative;
+}
+.shop-now {
+    position: absolute;
+    top: 71%;
+    left: 24%;
+    width: 156px;
+    height: 54px;
+    box-shadow: 0 3px 0 #dd6b44;
+    background-color: #fd926d;
+    font-family: "Helvetica Neue LT Std", sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #ffffff;
+    cursor: pointer;
+    & i {
+        transform: rotate(90deg);
+    }
+}
 // HEADER
 
-
-
-
 // CONTENT
 
 // CONTENT
-
-
-
-
 // FOOTER
 
 // FOOTER
