--- a/src/css/slick-theme.css
+++ b/src/css/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('../ajax-loader.gif') center center no-repeat;
+    background: #fff url('./ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
@@ -12,11 +12,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('../fonts/slick.eot');
-    src: url('../fonts/slick.eot?#iefix') format('embedded-opentype'), 
-         url('../fonts/slick.woff') format('woff'), 
-         url('../fonts/slick.ttf') format('truetype'), 
-         url('../fonts/slick.svg#slick') format('svg');
+    src: url('./fonts/slick.eot');
+    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
 /* Arrows */
 .slick-prev,
@@ -122,15 +119,19 @@
     margin-bottom: 30px;
 }
 
-.slick-dots {
+.slick-dots
+{
     position: absolute;
-    bottom: 20px;
-    left: 0;
+    bottom: -50px;
+
     display: block;
+
     width: 100%;
     padding: 0;
     margin: 0;
+
     list-style: none;
+
     text-align: center;
 }
 .slick-dots li
@@ -176,22 +177,18 @@
 }
 .slick-dots li button:before
 {
-    font-family: 'slick';
-    font-size: 10px;
+font-family: 'slick';
+    font-size: 52px;
     line-height: 20px;
-
     position: absolute;
     top: 0;
     left: 0;
-
-    width: 20px;
-    height: 20px;
-
+    width: 10px;
+    height: 10px;
     content: '•';
     text-align: center;
-
-    opacity: .25;
-    color: #d6e1e5;
+    /*opacity: .25;*/
+    color: #877b77;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -199,5 +196,5 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: #30c5a5;
+    color: #fd936e;
 }
